# helicast

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README.md  conda_setup.sh  makefile  pyproject.toml  test.txt.dvc
.dvc/: config
data/: victoria-daily-electricity.pq
docs/source/: conf.py  development.rst  getting-started.rst  index.rst  python-api.rst  python-api.template
docs/source/_scripts/: make-python-api.py
docs/source/getting-started/: installation.rst  other-section.rst
docs/source/python-api/base/: HelicastBaseEstimator.rst  InvertibleTransformerMixin.rst  PredictorMixin.rst  StatelessEstimator.rst  StatelessTransformerMixin.rst  TransformerMixin.rst  dataclass.rst  is_stateless.rst  validate_X.rst  validate_X_y.rst  validate_y.rst
docs/source/python-api/cache/: CACHE_DIR.rst  MEMORY.rst  cache.rst  clear_cache.rst
docs/source/python-api/column_filters/: AllSelector.rst  DTypeRemover.rst  DTypeSelector.rst  NameRemover.rst  NameSelector.rst  RegexRemover.rst  RegexSelector.rst  remove_columns_by_dtype.rst  remove_columns_by_names.rst  remove_columns_by_regex.rst  select_columns_by_dtype.rst  select_columns_by_names.rst  select_columns_by_regex.rst
docs/source/python-api/data_processing/: TestClass.rst  add_day_of_week_column.rst  add_day_of_year_column.rst  add_future_columns.rst  add_hour_column.rst  add_lagged_columns.rst  add_sweden_public_holiday_column.rst  remove_columns_by_regex.rst  select_columns_by_regex.rst
docs/source/python-api/datasets/: RegressionDataMaker.rst  generate_dataframe.rst  make_regression_data_by_r2_target.rst
docs/source/python-api/logging/: configure_logging.rst
docs/source/python-api/meta_models/: GeneralizedRegressor.rst
docs/source/python-api/ml_utils/: split_data.rst
docs/source/python-api/openmeteo/: OpenMeteoForecastAPI.rst  OpenMeteoHistoricalAPI.rst  OpenMeteoHistoricalForecastAPI.rst  get_openmeteo_forecast_data.rst  get_openmeteo_historical_data.rst  get_openmeteo_historical_forecast_data.rst
docs/source/python-api/sklearn/: HelicastWrapper.rst  Pipeline.rst  TransformedTargetRegressor.rst  helicast_auto_wrap.rst
docs/source/python-api/stateless_transform/: Clipper.rst  SquareTransformer.rst
docs/source/python-api/timeseries/: DayOfWeekColumnAdder.rst  DayOfYearColumnAdder.rst  ForecastHorizonColumnsAdder.rst  HourColumnAdder.rst  SwedenPublicHolidayColumnAdder.rst  TzDatetimeIndexConverter.rst  TzDatetimeIndexLocalizator.rst  TzDatetimeIndexTransformer.rst  add_day_of_week_column.rst  add_day_of_year_column.rst  add_forecast_horizon_columns.rst  add_hour_column.rst  add_sweden_public_holiday_column.rst  apply_sun_mask.rst  get_sunrise_sunset_times.rst  tz_convert_datetime_index.rst  tz_localize_datetime_index.rst  (+1 more)
examples/: 1-ColumnFilters.ipynb  2-Compose.ipynb  3-AutoDateConvert.ipynb
helicast/: __init__.py  base.py  logging.py
helicast/column_filters/: _base.py  _dtypes.py
helicast/compose/: __init__.py  _pandas_pipeline.py  _pandas_transformed_target_regressor.py  _pandas_transformer.py
helicast/data_processing/: __init__.py  _feature_engineering.py
helicast/pandas_sklearn/: _pandas_pipeline.py  _pandas_transformed_target_regressor.py  _pandas_transformer.py
helicast/scalers/: _base.py  _compose.py  _scalers.py
helicast/transform/: __init__.py  _base.py  _column_filters.py  _feature_engineering.py  _pandas_pipeline.py  _pandas_transformer.py  _sklearn_transformers.py
helicast/typing/: _singletons.py  _timeseries_dataframe.py
helicast/utils/: __init__.py  _date_utils.py
helicast/validation/: __init__.py  _pydantic.py  _type_validation.py
src/helicast/: __init__.py  base.py  cache.py  logging.py  ml_utils.py  openmeteo.py
src/helicast/base/: __init__.py  _base.py  _dataclass.py  _estimator.py  _predictor.py  _transformer.py
src/helicast/check/: __init__.py  _collections.py
src/helicast/column_filters/: __init__.py  _base.py  _dtypes.py  _name.py  _regex.py
src/helicast/datasets/: __init__.py  _dataframe.py  _regression.py
src/helicast/meta_models/: __init__.py  _generalized_regressor.py
src/helicast/pandas_sklearn/: __init__.py
src/helicast/sklearn/: __init__.py  _pipeline.py  _transformed_target_regressor.py  _wrapper.py
src/helicast/stateless_transform/: __init__.py  _invertible.py  _non_invertible.py
src/helicast/timeseries/: __init__.py  _feature_engineering.py  _sun_masking.py  _timezones.py
src/helicast/transform/: __init__.py  _feature_engineering.py  _filtered_transform.py  _index.py  _time_features.py
src/helicast/typing/: __init__.py  _enums.py  _protocols.py  _singletons.py  _time.py  _timeseries_dataframe.py
src/helicast/utils/: __init__.py  _collections.py  _dataframe.py  _date_utils.py  _docs.py  _git.py  _inspect.py  _time.py
src/helicast/validation/: __init__.py  _collections.py  _data_validation.py  _pandas.py  _pandas_timeseries_validation.py  _structure.py  _type_validation.py
test/: test_imports.py
test/validation/: test_collections.py
(+69 files in other folders)
