[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "helicast"
dynamic = ["version"]   
description = "Helicon Data Science team forecasting tool repo"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Helicon"},
]
keywords = [
    "time series",
    "machine learning",
    "pytorch",
]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "attrs",
    "pydantic>=2.0",
    "typing_extensions",
    "pandera",
     
    "pandas>=2.0",
    "pyarrow",
    "openpyxl",
    "pyyaml",
    
    "matplotlib",
    "plotly",

    # ML/maths
    "numpy>=1.20",
    "tensorboard",
    "optuna",
    "scikit-learn>=1.0",
    "joblib",
    "scipy",
    "onnxruntime",

    # nvidia
    "pynvml",

    # PyTorch via pip as requirement?
    "torch",
    "torchvision",
    "torchaudio",
    "lightning", # Include PyTorch lightning?
]


[tool.setuptools_scm]
version_file = "helicast/_version.py"

[project.scripts]
twigeox = "helicast.__main__:main"

[project.urls]
homepage = "https://gitlab.com/trelltech/data-science/helicast"
documentation = "https://gitlab.com/trelltech/data-science/helicast"
source = "https://gitlab.com/trelltech/data-science/helicast"
tracker = "https://gitlab.com/trelltech/data-science/helicast/issues"

[project.optional-dependencies]
dev = ["helicast[test, lint, docs]"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage"
]
lint = [
    "isort",
    "black",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-design",
    "nbsphinx",
    "ipython",
    "jupyter",
]

[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"] # Windows?
include-package-data = true
zip-safe = true 

# Python modules and packages that are included in the
# distribution package (and therefore become importable)
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["helicast*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests", "tests.*", "examples", "images"]

# Configuration for pytest
# https://docs.pytest.org/en/latest/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
testpaths = "tests"  # directory containing your tests
norecursedirs = [
    ".vscode",
    "__pycache__"
]
# Warnings that should be ignored
filterwarnings = [
    "ignore::DeprecationWarning"
]
# custom markers that can be used using pytest.mark
markers = [
    "slow: lower-importance tests that take an excessive amount of time",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "helicast"
skip = ".venv,.git,__pycache__,docs/source/conf.py,old,build,dist"