[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/helicast/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/helicast"]

[project]
name = "helicast"
dynamic = ["version"]   
description = "Helicon Data Science team forecasting tool repo"
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "scikit-learn>=1.5",
    "numpy>=1.2",
    "matplotlib>=3.0",
    "strenum>=0.4.15",
    "holidays>=0.52",
    "pyarrow>=10.1.0",
    "timezonefinder>=6.5.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "nbstripout>=0.7",
    "jupyter>=1.0",
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.14.0",
    "sphinx-design>=0.5.0",
    "nbsphinx>=0.9.0",
    "ipython>=8.12.0",
    "autodoc-pydantic>=2.2.0",
    "coverage>=7.5.4",
]

[tool.ruff.lint]
ignore = ["F403"]

[tool.ruff.lint.isort]
known-first-party = ["./src"]

[tool.ruff.format]
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
